Add authentication and many changes below
UI changes:
 • Added application icon;
 • Added splash screen;
 • Added corresponding strings, icons and shake animation.

App changes:
 • Added and configured peanut and partner api's;
 • Added corresponding models for response and body;
 • Configured preferences and dependency injection;
 • Added basic authentication implementation;
 • Added basic result wrapper for control UI changes while an async call is in progress (Check utils.Result.kt);
 • Added extension for preferences, views and response.

--- a/app/src/main/res/navigation/graph_main.xml
+++ b/app/src/main/res/navigation/graph_main.xml
@@ -36,7 +36,13 @@
         <fragment
             android:id="@+id/profile_fragment"
             android:name="org.skyfaced.kpm_test.ui.profile.ProfileFragment"
-            tools:layout="@layout/fragment_profile" />
+            tools:layout="@layout/fragment_profile">
+            <action
+                android:id="@+id/action_profile_fragment_to_authentication_fragment"
+                app:destination="@id/authentication_fragment"
+                app:popUpTo="@id/profile_fragment"
+                app:popUpToInclusive="true" />
+        </fragment>
 
     </navigation>
 
