--- a/app/src/main/res/layout/fragment_authentication.xml
+++ b/app/src/main/res/layout/fragment_authentication.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.authentication.AuthenticationFragment">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:layout_width="75dp"
         android:layout_height="75dp"
         app:layout_constraintBottom_toTopOf="@id/gl_divider"
@@ -32,7 +32,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:imeOptions="actionNext"
-            android:inputType="text" />
+            android:digits="0123456789"
+            android:inputType="numberDecimal"
+            android:text="20234561" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -53,7 +55,8 @@
             android:id="@+id/edt_password"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:imeOptions="actionGo"
+            android:imeOptions="actionNext"
+            android:text="ladevi31"
             android:inputType="textPassword" />
 
     </com.google.android.material.textfield.TextInputLayout>
