--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,33 +16,33 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/lbl_username"
+        android:id="@+id/txt_username"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:text="TestName"
         android:textAppearance="?attr/textAppearanceHeadline6"
         android:textColor="?attr/colorOnBackground"
         android:translationZ="8dp"
-        app:layout_constraintBottom_toTopOf="@id/lbl_phone_number"
+        app:layout_constraintBottom_toTopOf="@id/txt_phone_number"
         app:layout_constraintEnd_toStartOf="@id/btn_sign_out"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintVertical_chainStyle="packed"
+        tools:text="TestName" />
 
     <TextView
-        android:id="@+id/lbl_phone_number"
+        android:id="@+id/txt_phone_number"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="********55"
         android:textAppearance="?attr/textAppearanceCaption"
         android:textColor="?attr/colorOnBackground"
         android:translationZ="8dp"
         app:layout_constraintBottom_toTopOf="@id/gl_toolbar"
-        app:layout_constraintStart_toStartOf="@id/lbl_username"
-        app:layout_constraintTop_toBottomOf="@id/lbl_username" />
+        app:layout_constraintStart_toStartOf="@id/txt_username"
+        app:layout_constraintTop_toBottomOf="@id/txt_username"
+        tools:text="********55" />
 
     <ImageView
         android:id="@+id/btn_sign_out"
@@ -83,7 +83,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Баланс"
+                android:text="@string/lbl_balance"
                 android:textAppearance="?attr/textAppearanceHeadline5" />
 
             <com.google.android.material.card.MaterialCardView
@@ -103,22 +103,22 @@
                         android:id="@+id/txt_balance"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="2 796.24 ₽"
-                        android:textAppearance="?attr/textAppearanceHeadline3" />
+                        android:textAppearance="?attr/textAppearanceHeadline3"
+                        tools:text="2 796.24 ₽" />
 
                     <TextView
                         android:id="@+id/txt_equity"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Капитал: 2 796.24 ₽"
-                        android:textAppearance="?attr/textAppearanceSubtitle2" />
+                        android:textAppearance="?attr/textAppearanceSubtitle2"
+                        tools:text="Капитал: 2 796.24 ₽" />
 
                     <TextView
                         android:id="@+id/txt_free_margin"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Доступно: 2 796.24 ₽"
-                        android:textAppearance="?attr/textAppearanceSubtitle2" />
+                        android:textAppearance="?attr/textAppearanceSubtitle2"
+                        tools:text="Доступно: 2 796.24 ₽" />
 
                 </LinearLayout>
 
@@ -128,7 +128,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Сделки"
+                android:text="@string/lbl_trades"
                 android:textAppearance="?attr/textAppearanceHeadline5" />
 
             <com.google.android.material.card.MaterialCardView
@@ -142,55 +142,55 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/lbl_curren_trades_count_value"
+                        android:id="@+id/txt_current_trades_count_value"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:paddingHorizontal="16dp"
-                        android:text="0"
                         android:textAppearance="?attr/textAppearanceHeadline3"
                         app:layout_constrainedWidth="true"
                         app:layout_constraintEnd_toStartOf="@id/divider_vertical"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="0" />
 
                     <TextView
                         android:id="@+id/lbl_current_trades_count_caption"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Активно"
-                        app:layout_constraintEnd_toEndOf="@id/lbl_curren_trades_count_value"
-                        app:layout_constraintStart_toStartOf="@id/lbl_curren_trades_count_value"
-                        app:layout_constraintTop_toBottomOf="@id/lbl_curren_trades_count_value" />
+                        android:text="@string/lbl_active"
+                        app:layout_constraintEnd_toEndOf="@id/txt_current_trades_count_value"
+                        app:layout_constraintStart_toStartOf="@id/txt_current_trades_count_value"
+                        app:layout_constraintTop_toBottomOf="@id/txt_current_trades_count_value" />
 
                     <TextView
-                        android:id="@+id/lbl_all_trades_count_value"
+                        android:id="@+id/txt_all_trades_count_value"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:paddingHorizontal="16dp"
-                        android:text="12"
                         android:textAppearance="?attr/textAppearanceHeadline3"
                         app:layout_constrainedWidth="true"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/divider_vertical"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="12" />
 
                     <TextView
                         android:id="@+id/lbl_all_trades_count_caption"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Всего"
-                        app:layout_constraintEnd_toEndOf="@id/lbl_all_trades_count_value"
-                        app:layout_constraintStart_toStartOf="@id/lbl_all_trades_count_value"
-                        app:layout_constraintTop_toBottomOf="@id/lbl_all_trades_count_value" />
+                        android:text="@string/lbl_total"
+                        app:layout_constraintEnd_toEndOf="@id/txt_all_trades_count_value"
+                        app:layout_constraintStart_toStartOf="@id/txt_all_trades_count_value"
+                        app:layout_constraintTop_toBottomOf="@id/txt_all_trades_count_value" />
 
                     <TextView
                         android:id="@+id/lbl_check_current_trades"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="16dp"
-                        android:text="Просмотр активных сделок"
+                        android:text="@string/lbl_check_active_trades"
                         android:textAppearance="?attr/textAppearanceBody1"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/divider_horizontal" />
@@ -246,7 +246,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Динамика"
+                android:text="@string/lbl_tread_volume"
                 android:textAppearance="?attr/textAppearanceHeadline5" />
 
             <com.google.android.material.card.MaterialCardView
@@ -261,44 +261,44 @@
                     android:padding="8dp">
 
                     <TextView
-                        android:id="@+id/lbl_volume_current_trades_count_value"
+                        android:id="@+id/txt_volume_current_trades_count_value"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingHorizontal="16dp"
-                        android:text="0"
                         android:textAppearance="?attr/textAppearanceHeadline3"
                         app:layout_constrainedWidth="true"
                         app:layout_constraintEnd_toStartOf="@id/volume_divider_vertical"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="0" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Активно"
-                        app:layout_constraintEnd_toEndOf="@id/lbl_volume_current_trades_count_value"
-                        app:layout_constraintStart_toStartOf="@id/lbl_volume_current_trades_count_value"
-                        app:layout_constraintTop_toBottomOf="@id/lbl_volume_current_trades_count_value" />
+                        android:text="@string/lbl_active"
+                        app:layout_constraintEnd_toEndOf="@id/txt_volume_current_trades_count_value"
+                        app:layout_constraintStart_toStartOf="@id/txt_volume_current_trades_count_value"
+                        app:layout_constraintTop_toBottomOf="@id/txt_volume_current_trades_count_value" />
 
                     <TextView
-                        android:id="@+id/lbl_volume_all_trades_count_value"
+                        android:id="@+id/txt_volume_all_trades_count_value"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingHorizontal="16dp"
-                        android:text="360"
                         android:textAppearance="?attr/textAppearanceHeadline3"
                         app:layout_constrainedWidth="true"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@id/volume_divider_vertical"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="360" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Всего"
-                        app:layout_constraintEnd_toEndOf="@id/lbl_volume_all_trades_count_value"
-                        app:layout_constraintStart_toStartOf="@id/lbl_volume_all_trades_count_value"
-                        app:layout_constraintTop_toBottomOf="@id/lbl_volume_all_trades_count_value" />
+                        android:text="@string/lbl_total"
+                        app:layout_constraintEnd_toEndOf="@id/txt_volume_all_trades_count_value"
+                        app:layout_constraintStart_toStartOf="@id/txt_volume_all_trades_count_value"
+                        app:layout_constraintTop_toBottomOf="@id/txt_volume_all_trades_count_value" />
 
                     <View
                         android:id="@+id/volume_divider_vertical"
@@ -318,7 +318,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Адрес"
+                android:text="@string/lbl_address"
                 android:textAppearance="?attr/textAppearanceHeadline5" />
 
 
@@ -340,7 +340,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/za" />
+                        tools:srcCompat="@drawable/za" />
 
                     <TextView
                         android:id="@+id/txt_city"
@@ -349,11 +349,11 @@
                         android:ellipsize="end"
                         android:maxLines="1"
                         android:paddingHorizontal="8dp"
-                        android:text="Калининград"
                         android:textAppearance="?attr/textAppearanceHeadline5"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/img_country"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="Калининград" />
 
                     <TextView
                         android:id="@+id/txt_address"
@@ -362,11 +362,11 @@
                         android:ellipsize="end"
                         android:maxLines="1"
                         android:paddingHorizontal="8dp"
-                        android:text="Адрес: ул Алданская д 15 кв 11"
                         android:textAppearance="?attr/textAppearanceCaption"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/img_country"
-                        app:layout_constraintTop_toBottomOf="@id/txt_city" />
+                        app:layout_constraintTop_toBottomOf="@id/txt_city"
+                        tools:text="Адрес: ул Алданская д 15 кв 11" />
 
                     <TextView
                         android:id="@+id/txt_zip_code"
@@ -375,12 +375,12 @@
                         android:ellipsize="end"
                         android:maxLines="1"
                         android:paddingHorizontal="8dp"
-                        android:text="Индекс: ru236013"
                         android:textAppearance="?attr/textAppearanceCaption"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/img_country"
-                        app:layout_constraintTop_toBottomOf="@id/txt_address" />
+                        app:layout_constraintTop_toBottomOf="@id/txt_address"
+                        tools:text="Индекс: ru236013" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
