Add skeleton dependency

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -98,6 +98,7 @@
                 android:padding="16dp">
 
                 <TextView
+                    android:id="@+id/lbl_balance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/lbl_balance"
