--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -368,7 +368,7 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            tools:srcCompat="@drawable/fl_za" />
+                            tools:srcCompat="@drawable/sample_country_flag" />
 
                         <TextView
                             android:id="@+id/txt_city"
