Multiple back stack doesn't work ;c

--- a/app/src/main/res/navigation/graph_start.xml
+++ b/app/src/main/res/navigation/graph_start.xml
@@ -10,8 +10,8 @@
         android:name="org.skyfaced.kpm_test.ui.start.StartFragment"
         tools:layout="@layout/fragment_start">
         <action
-            android:id="@+id/action_start_fragment_to_graph_main"
-            app:destination="@id/graph_main"
+            android:id="@+id/action_start_fragment_to_profile_graph"
+            app:destination="@id/profile_graph"
             app:popUpTo="@id/start_fragment"
             app:popUpToInclusive="true" />
         <action
@@ -26,12 +26,16 @@
         android:name="org.skyfaced.kpm_test.ui.authentication.AuthenticationFragment"
         tools:layout="@layout/fragment_authentication">
         <action
-            android:id="@+id/action_authentication_fragment_to_graph_main"
-            app:destination="@id/graph_main"
+            android:id="@+id/action_authentication_fragment_to_profile_graph"
+            app:destination="@id/profile_graph"
             app:popUpTo="@id/authentication_fragment"
             app:popUpToInclusive="true" />
     </fragment>
 
-    <include app:graph="@navigation/graph_main" />
+    <include app:graph="@navigation/promotions_graph" />
+
+    <include app:graph="@navigation/archive_graph" />
+
+    <include app:graph="@navigation/profile_graph" />
 
 </navigation>
