--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/stock_graph"
+        android:id="@+id/promotions_graph"
         android:icon="@drawable/ic_stock"
         android:title="@string/lbl_stock" />
     <item
