--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -87,6 +87,7 @@
         app:layout_constraintTop_toBottomOf="@id/gl_toolbar">
 
         <androidx.core.widget.NestedScrollView
+            android:id="@+id/scrollable_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false">
@@ -419,5 +420,11 @@
         </androidx.core.widget.NestedScrollView>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/grp_toolbar"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:constraint_referenced_ids="img_verification_level, txt_username, txt_phone_number" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
